TRK-93 feat: method finalized to return list of all roles
