# src/docs/swagger.json
@@ -198,6 +198,23 @@
                 ],
                 "responses": {}
             }
+        },
+        "/api/usermanagement/data/roles": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Management"
+                ],
+                "summary": "Display of relation all role",
+                "responses": {}
+            }
         }
     },
     "definitions": {
